--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "forzatunerbox",
+  "name": "forza-tuner-box",
   "compatibility_date": "2025-07-09",
   "assets": {
     "directory": "./dist"
