--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
-    "recharts": "^3.6.0",
+    "recharts": "2.15.4",
     "resend": "^6.7.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
